--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,30 @@
 body {
     padding-top: 5rem;
 }
+
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+span.required {
+    color: red;
+    margin-left: 5px;
+}
+
+form {
+    margin-top: 20px;
+}
+
+input[type="submit"] {
+    margin-top: 10px;
+}
+
+.blue-button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
